# NebulaFX

./: .gitignore  .taplo.toml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.new  Dockerfile.prod  Dockerfile.source  Makefile  README.md  config.dev.toml  config.toml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  rustfmt.toml
crates/ahm/: Cargo.toml
crates/ahm/src/: error.rs  lib.rs
crates/ahm/src/heal/: channel.rs  erasure_healer.rs  event.rs  manager.rs  mod.rs  progress.rs  resume.rs  storage.rs  task.rs  utils.rs
crates/ahm/src/scanner/: checkpoint.rs  data_scanner.rs  io_monitor.rs  io_throttler.rs  lifecycle.rs  local_stats.rs  metrics.rs  mod.rs  node_scanner.rs  stats_aggregator.rs
crates/ahm/tests/: endpoint_index_test.rs  heal_bug_fixes_test.rs  heal_integration_test.rs  integration_tests.rs  lifecycle_cache_test.rs  lifecycle_integration_test.rs  optimized_scanner_tests.rs  scanner_optimization_tests.rs
crates/appauth/: Cargo.toml  README.md
crates/appauth/src/: token.rs
crates/audit/: Cargo.toml  README.md
crates/audit/src/: entity.rs  error.rs  global.rs  lib.rs  observability.rs  registry.rs  system.rs
crates/audit/tests/: config_parsing_test.rs  integration_test.rs  observability_test.rs  performance_test.rs  system_integration_test.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: bucket_stats.rs  data_usage.rs  globals.rs  heal_channel.rs  last_minute.rs  lib.rs  metrics.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/config/src/audit/: mod.rs  mqtt.rs  webhook.rs
crates/config/src/constants/: app.rs  console.rs  env.rs  mod.rs  profiler.rs  runtime.rs  targets.rs  tls.rs
crates/config/src/notify/: arn.rs  mod.rs  mqtt.rs  store.rs  webhook.rs
crates/config/src/observability/: metrics.rs  mod.rs
crates/config/src/opa/: mod.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: encdec.rs  error.rs  jwt.rs  lib.rs
crates/crypto/src/encdec/: aes.rs  decrypt.rs  encrypt.rs  id.rs  tests.rs
crates/crypto/src/jwt/: decode.rs  encode.rs  tests.rs
crates/e2e_test/: Cargo.toml
crates/e2e_test/src/: common.rs  lib.rs
crates/e2e_test/src/kms/: README.md  bucket_default_encryption_test.rs  common.rs  encryption_metadata_test.rs  kms_comprehensive_test.rs  kms_edge_cases_test.rs  kms_fault_recovery_test.rs  kms_local_test.rs  kms_vault_test.rs  mod.rs  multipart_encryption_test.rs  test_runner.rs
crates/e2e_test/src/reliant/: conditional_writes.rs  lifecycle.rs  lock.rs  mod.rs  node_interact_test.rs  sql.rs
crates/ecstore/: Cargo.toml  README.md  README_cn.md  run_benchmarks.sh
crates/ecstore/benches/: comparison_benchmark.rs  erasure_benchmark.rs
crates/ecstore/src/: admin_server_info.rs  batch_processor.rs  bitrot.rs  checksum.rs  chunk_stream.rs  compress.rs  data_usage.rs  disks_layout.rs  endpoints.rs  erasure.rs  error.rs  event_notification.rs  file_cache.rs  global.rs  lib.rs  metrics_realtime.rs  notification_sys.rs  pools.rs  rebalance.rs  set_disk.rs  sets.rs  store.rs  store_api.rs  store_init.rs  store_list_objects.rs  store_utils.rs
crates/filemeta/: Cargo.toml  README.md
crates/filemeta/benches/: xl_meta_bench.rs
crates/filemeta/src/: error.rs  fileinfo.rs  filemeta.rs  filemeta_inline.rs  headers.rs  lib.rs  metacache.rs  replication.rs  test_data.rs
crates/iam/: Cargo.toml  README.md
crates/iam/src/: cache.rs  entity.rs  error.rs  init.rs  lib.rs  manager.rs  store.rs  sys.rs  types.rs
crates/kms/: Cargo.toml
crates/kms/src/: api_types.rs  cache.rs  config.rs  error.rs  lib.rs  manager.rs  service_manager.rs  types.rs
crates/lock/: Cargo.toml  README.md
crates/lock/examples/: environment_control.rs
crates/lock/src/: error.rs  guard.rs  lib.rs  namespace.rs  types.rs
crates/madmin/: Cargo.toml  README.md
crates/madmin/src/: group.rs  heal_commands.rs  health.rs  info_commands.rs  lib.rs  metrics.rs  policy.rs  service_commands.rs  trace.rs  user.rs  utils.rs
crates/mcp/: Cargo.toml  Dockerfile  README.md
crates/mcp/src/: config.rs  lib.rs  main.rs  s3_client.rs  server.rs
crates/notify/: Cargo.toml  README.md
crates/notify/examples/: base.rs  full_demo.rs  full_demo_one.rs  webhook.rs
crates/notify/src/: error.rs  event.rs  factory.rs  global.rs  integration.rs  lib.rs  notifier.rs  registry.rs  stream.rs
crates/obs/: Cargo.toml  README.md
crates/obs/examples/: config.toml  server.rs
crates/obs/src/: config.rs  error.rs  global.rs  lib.rs  recorder.rs  telemetry.rs
crates/policy/: Cargo.toml  README.md
crates/policy/src/: arn.rs  auth.rs  error.rs  format.rs  lib.rs  policy.rs  service_type.rs  utils.rs
crates/policy/tests/: policy_is_allowed.rs
crates/profilingx/: Cargo.toml
crates/profilingx/src/: config.rs  lib.rs  profiler.rs
crates/protos/: Cargo.toml  README.md
crates/protos/src/: lib.rs  main.rs  node.proto
crates/rio/: Cargo.toml  README.md
crates/rio/src/: checksum.rs  compress_index.rs  compress_reader.rs  encrypt_reader.rs  errors.rs  etag.rs  etag_reader.rs  hardlimit_reader.rs  hash_reader.rs  http_reader.rs  lib.rs  limit_reader.rs  reader.rs  writer.rs
crates/s3select-api/: Cargo.toml  README.md
crates/s3select-api/src/: lib.rs  object_store.rs
crates/s3select-query/: Cargo.toml  README.md
crates/s3select-query/src/: instance.rs  lib.rs
crates/signer/: Cargo.toml  README.md
crates/signer/src/: constants.rs  lib.rs  request_signature_streaming.rs  request_signature_streaming_unsigned_trailer.rs  request_signature_v2.rs  request_signature_v4.rs  utils.rs
crates/targets/: Cargo.toml
crates/targets/src/: arn.rs  check.rs  error.rs  event_name.rs  lib.rs  store.rs
crates/workers/: Cargo.toml  README.md
crates/workers/src/: lib.rs  workers.rs
crates/zip/: Cargo.toml  README.md
crates/zip/src/: lib.rs
cratex/iamx/: Cargo.toml  README.md  STRUCTURE.md
cratex/iamx/migrations/: V1__initial_schema.sql
cratex/iamx/src/: error.rs  init.rs  lib.rs  sys.rs  utils.rs
cratex/tokiox/: Cargo.toml  README.md  STRUCTURE.md
cratex/tokiox/src/: config.rs  lib.rs
(+506 files in other folders)
