

[package]
name = "nebulafx-appauth"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Application authentication and authorization for NebulaFX, providing secure access control and user management."
keywords = ["authentication", "authorization", "security", "nebulafx", "Minio"]
categories = ["web-programming", "development-tools", "authentication"]

[dependencies]
base64-simd = { workspace = true }
rsa = { workspace = true }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

[lints]
workspace = true
