

[package]
name = "nebulafx-audit"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Audit target management system for NebulaFX, providing multi-target fan-out and hot reload capabilities."
documentation = "https://docs.rs/nebulafx-audit/latest/nebulafx_audit/"
keywords = ["audit", "target", "management", "fan-out", "NebulaFX"]
categories = ["web-programming", "development-tools", "asynchronous", "api-bindings"]

[dependencies]
nebulafx-targets = { workspace = true }
nebulafx-config = { workspace = true, features = ["audit", "constants"] }
nebulafx-ecstore = { workspace = true }
chrono = { workspace = true }
const-str = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread", "rt", "time", "macros"] }
tracing = { workspace = true, features = ["std", "attributes"] }
url = { workspace = true }
rumqttc = { workspace = true }


[lints]
workspace = true
