

[package]
name = "nebulafx-config"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Configuration management for NebulaFX, providing a centralized way to manage application settings and features."
keywords = ["configuration", "settings", "management", "nebulafx", "Minio"]
categories = ["web-programming", "development-tools", "config"]

[dependencies]
const-str = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["constants"]
audit = ["dep:const-str", "constants"]
constants = ["dep:const-str"]
notify = ["dep:const-str", "constants"]
observability = ["constants"]
opa = ["constants"]
