

[package]
name = "nebulafx-iam"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Identity and Access Management (IAM) for NebulaFX, providing user management, roles, and permissions."
keywords = ["iam", "identity", "access-management", "nebulafx", "Minio"]
categories = ["web-programming", "development-tools", "authentication"]
documentation = "https://docs.rs/nebulafx-iam/latest/nebulafx_iam/"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
time = { workspace = true, features = ["serde-human-readable"] }
serde = { workspace = true, features = ["derive", "rc"] }
nebulafx-ecstore = { workspace = true }
nebulafx-policy.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
arc-swap = { workspace = true }
nebulafx-crypto = { workspace = true }
futures.workspace = true
rand.workspace = true
base64-simd = { workspace = true }
jsonwebtoken = { workspace = true }
tracing.workspace = true
nebulafx-madmin.workspace = true
nebulafx-utils = { workspace = true, features = ["path"] }
tokio-util.workspace = true

[dev-dependencies]
