

[package]
name = "nebulafx-kms"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Key Management Service for NebulaFX, providing secure key generation, storage, and object encryption capabilities."
keywords = ["kms", "encryption", "key-management", "nebulafx", "security"]
categories = ["cryptography", "web-programming", "authentication"]

[lints]
workspace = true

[dependencies]
# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

# Configuration and storage
url = { workspace = true }
tempfile = { workspace = true }

# Caching
moka = { workspace = true, features = ["future"] }

# Additional dependencies
md5 = { workspace = true }

# HTTP client for Vault
reqwest = { workspace = true }
vaultrs = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
