

[package]
name = "nebulafx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "NebulaFX MCP (Model Context Protocol) Server"
keywords = ["mcp", "s3", "aws", "nebulafx", "server"]
categories = ["development-tools", "web-programming"]
documentation = "https://docs.rs/nebulafx-mcp/latest/nebulafx_mcp/"

[[bin]]
name = "nebulafx-mcp"
path = "src/main.rs"

[dependencies]
# AWS SDK for S3 operations
aws-sdk-s3.workspace = true

# Async runtime and utilities
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "signal"] }

# MCP SDK with macros support
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }

# Command line argument parsing
clap = { workspace = true, features = ["derive", "env"] }

# Serialization (still needed for S3 data structures)
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true }

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# File handling and MIME type detection
mime_guess = { workspace = true }

[dev-dependencies]
# Testing framework and utilities
