

[package]
name = "nebulafx-notify"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "File system notification service for NebulaFX, providing real-time updates on file changes and events."
keywords = ["file-system", "notification", "real-time", "nebulafx", "Minio"]
categories = ["web-programming", "development-tools", "filesystem"]
documentation = "https://docs.rs/nebulafx-notify/latest/nebulafx_notify/"

[dependencies]
nebulafx-config = { workspace = true, features = ["notify", "constants"] }
nebulafx-ecstore = { workspace = true }
nebulafx-utils = { workspace = true, features = ["path", "sys"] }
nebulafx-targets = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
form_urlencoded = { workspace = true }
hashbrown = { workspace = true }
quick-xml = { workspace = true, features = ["serialize", "async-tokio"] }
rayon = { workspace = true }
rumqttc = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starshard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }
wildmatch = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum = { workspace = true }

[lints]
workspace = true
