

[package]
name = "nebulafx-s3select-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
description = "S3 Select API implementation for NebulaFX, enabling efficient data retrieval from S3-compatible object stores."
keywords = ["s3-select", "api", "nebulafx", "Minio", "object-store"]
categories = ["web-programming", "development-tools", "asynchronous"]
documentation = "https://docs.rs/nebulafx-s3select-api/latest/nebulafx_s3select_api/"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
nebulafx-common.workspace = true
datafusion = { workspace = true }
nebulafx-ecstore.workspace = true
futures = { workspace = true }
futures-core = { workspace = true }
http.workspace = true
object_store = { workspace = true }
pin-project-lite.workspace = true
s3s.workspace = true
snafu = { workspace = true, features = ["backtrace"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
transform-stream.workspace = true
url.workspace = true