[package]
name = "nebulafx-targets"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
description = "Notification target abstraction and implementations for NebulaFX"
keywords = ["file-system", "notification", "target", "nebulafx", "Minio"]
categories = ["web-programming", "development-tools", "filesystem"]
documentation = "https://docs.rs/nebulafx-target/latest/nebulafx_target/"

[dependencies]
nebulafx-config = { workspace = true, features = ["notify", "constants", "audit"] }
nebulafx-utils = { workspace = true, features = ["sys", "notify"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
